# plant-data

./: .env.template  .gitignore  README.md  pyproject.toml
data/crosswalks/: NPP_GIPT_crosswalk (1).csv  eia_plant_coordinates.parquet  entsoe_plant_coordinates.parquet  npp_plant_coordinates.parquet  unified_plant_crosswalk.parquet
data/gcpt/: EIA-GCPT ID crosswalk 12-15-25.xlsx  README.md
notebooks/: eia_plant_names.ipynb  llm_sanity_check.ipynb  test_gemini_api.ipynb
scripts/: README.md  bootstrap_neon_db.py  build_gcpt_crosswalks.py  download_gcpt.py  drop_old_reference_tables.sql  load_to_neon.py  test_npp_llm.py
src/: README.md  __init__.py  build_crosswalk.py  coordinate_matcher.py  gcpt_loader.py  utils.py
src/plant_name_matchers/: README.md  __init__.py  base.py  gemini.py  normalizers.py  retriever.py
tests/: __init__.py  test_build_crosswalk_helpers.py  test_coordinate_matcher.py  test_gemini_matcher.py  test_normalizers.py
