[project]
name = "plant-data"
version = "0.1.0"
description = "Centralized plant coordinate data for power generation analysis"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "pyarrow>=14.0.0",
    "rapidfuzz>=3.0.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
db = [
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "python-dotenv>=1.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
