[project]
name = "plant-data"
version = "0.1.0"
description = "Centralized plant coordinate data for power generation analysis"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "pyarrow>=14.0.0",
    "rapidfuzz>=3.0.0",
    "loguru>=0.7.0",
    "sqlalchemy>=2.0.46",
    "psycopg2-binary>=2.9.0",
    "python-dotenv>=1.0.0",
    "google-genai>=1.0.0",
    "jupyter>=1.1.1",
    "notebook>=7.5.4",
    "tqdm>=4.67.3",
    "ipykernel>=7.2.0",
    "plotly>=6.6.0",
    "dotenv>=0.9.9",
    "pydantic-settings>=2.13.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
